@@ -654,11 +654,12 @@ int Screen_SaveScreenshot(const char *filename, int interlaced)
 	else {
 		ptr2 = NULL;
 	}
+	if (is_png) {
 #ifdef HAVE_LIBPNG
-	if (is_png)
 		Screen_SavePNG(fp, ptr1, ptr2);
-	else
 #endif
+	}
+	else
 		Screen_SavePCX(fp, ptr1, ptr2);
 	fclose(fp);
 	if (interlaced) {
