@@ -386,9 +386,9 @@ int SIO_Mount(int diskno, const char *filename, int b_open_readonly)
 			trackoffset += next;
 		}
 
-		info = Util_malloc(sizeof(vapi_additional_info_t));
+		info = (vapi_additional_info_t *)Util_malloc(sizeof(vapi_additional_info_t));
 		additional_info[diskno-1] = info;
-		info->sectors = Util_malloc(sectorcount[diskno - 1] * 
+		info->sectors = (vapi_sec_info_t *)Util_malloc(sectorcount[diskno - 1] * 
  					    sizeof(vapi_sec_info_t));
 		memset(info->sectors, 0, sectorcount[diskno - 1] * 
  					 sizeof(vapi_sec_info_t));
@@ -511,9 +511,9 @@ int SIO_Mount(int diskno, const char *filename, int b_open_readonly)
 				sectorcount[diskno - 1] = 720;
 			}
 
-			info = Util_malloc(sizeof(pro_additional_info_t));
+			info = (pro_additional_info_t *)Util_malloc(sizeof(pro_additional_info_t));
 			additional_info[diskno-1] = info;
-			info->count = Util_malloc(sectorcount[diskno - 1]);
+			info->count = (unsigned char *)Util_malloc(sectorcount[diskno - 1]);
 			memset(info->count, 0, sectorcount[diskno -1]);
 			info->max_sector = (file_length-16)/(128+12);
 		}
@@ -600,7 +600,7 @@ void SIO_SizeOfSector(UBYTE unit, int sector, int *sz, ULONG *ofs)
 		vapi_sec_info_t *secinfo;
 
 		size = 128;
-		info = additional_info[unit];
+		info = (vapi_additional_info_t *)additional_info[unit];
 		if (info == NULL)
 			offset = 0;
 		else if (sector > sectorcount[unit])
